--- a/main.html
+++ b/main.html
@@ -10,7 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form>
+	<input id="name" type="text" placeholder="Name"/>
+	<input id="phone" type="text" placeholder="Phone Number"/>
+	<input id="address" type="text" placeholder="Address"/>
+	<input id="checkbox" type="checkbox" value="Have you ever lived with a Dog before?"/>
+	Have you ever lived with a Dog before?
+	<select id="multiSelect" multiple>
+		<option>siberian husky</option>
+		<option>german sheperd</option>
+		<option>dolmation</option>
+	</select>
+	<input type="submit" id="submit" value="Submit"/>
+	
 
+
+
+	
+</form>
 </body>
 
 </html>
